<resources>
    <string name="app_name">Niwaraa</string>
    <string name="appbar_scrolling_view_behavior" />

    <string name="nav_home">Home</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_addProperties">Add Property</string>
    <string name="nav_notify">Notification</string>
    <string name="nav_menu">Menu</string>
    <string name="call_owner">Call Owner</string>
    <string name="show_contact">Show Contact</string>
    <string name="enquiry">Enquire Now</string>

    <string name="principal">Principal Amount ₹</string>
    <string name="interest">Interest per year %</string>
    <string name="duration">How many years</string>
    <string name="emi">Emi per month ₹</string>
    <string name="total">Total interest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
